<resources>
    <string name="app_name">IMan</string>
    <string name="wallet">钱包</string>
    <string name="my_imcoin">My imcoin</string>
    <string name="use_of_imcoin">Use of imcoin</string>
    <string name="use_my_wallet">Use my wallet</string>
    <string name="want_to_ad">I want to advertise</string>
    <string name="want_to_promote_community">I want to promote a community</string>
    <string name="want_to_create_community">I want to create a community</string>
    <string name="account">Account</string>
    <string name="my_contacts">My contacts</string>
    <string name="my_post">My posts</string>
    <string name="settings">Settings</string>
    <string name="me_login">登陆</string>
    <string name="scanner_promt">请把二维码置于扫描框内</string>
    <string name="confirm">Confirm</string>
    <string name="report">Report</string>
    <string name="password">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="set_transfer_pwd">Set transfer password</string>
    <string name="chat">Chat</string>
    <string name="community_name">Community Name</string>
    <string name="select_tags">Select Tags</string>
    <string name="create_community">Create Community</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="contacts">Contacts</string>
    <string name="my_community">My Community</string>
    <string name="promote_community">Promote Community</string>
    <string name="cancel">Cancel</string>
    <string name="photo_album">Photo Album</string>
    <string name="camera">Camera</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout">Logout</string>
    <string name="transfer_pwd_hint">Limit 6 digits.</string>
    <string name="login">Login</string>
    <string name="get_code">Get Code</string>
    <string name="login_account_hint">Mobile Number</string>
    <string name="verification_code">Verification code</string>
    <string name="country_code">Country Code</string>
    <string name="version">Version</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="language">Language</string>
    <string name="set_imcoin_password">Set imcoin transfer password</string>
    <string name="a_new_version">A new version :</string>
    <string name="success">Success</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="introduction">Introduction</string>
    <string name="iman">地球人</string>
    <string name="introduction_default">这个地球人也夠懒了，什么都没写！</string>
    <string name="location_default">地球村</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="about_me">About Me</string>
    <string name="map">Map</string>
    <string name="about_community">About the community</string>
    <string name="tags_hint">Tags (separate multiple tags by ,)</string>
    <string name="tags">Tags</string>
    <string name="tags_limit">你最多可拥有5个标签</string>
    <string name="please_select_tags">你还没有选择标签</string>
    <string name="select_tags_more_than_5">拥有的标签不能超过5个</string>
    <string name="add_tags">Add tag</string>
    <string name="if_confirm_to_delete">Are you confirm to delete this tag?</string>
    <string name="tags_edti_hint">你可以写上自己想到的标签</string>
    <string name="congratulations">Congratulations</string>
    <string name="create_community_success">创建社区成功，现在你可以在社区里面做你喜欢做的事了.</string>
    <string name="search_contact_hint">Search by name</string>
    <string name="community_introduction_default">地球人都很懒，什么都没有写!</string>
    <string name="loading_hint">Loading...</string>
    <string name="load_failed_hint">Load fail</string>
    <string name="tag_cannot_contain_dot">标签不能包含\" , \"哦</string>
    <string name="exit">退出</string>
    <string name="quit">退出</string>
    <string name="if_confirm_quit_community">退出后将接收不到该社区的消息，确定退出该社区吗?</string>
    <string name="subject">Subject</string>
    <string name="detail">Detail</string>
    <string name="select_communities">Select communities</string>
    <string name="total_uesrs">Total Users:</string>
    <string name="total_cost">Total Cost(imcoin):</string>
    <string name="post_ad_now">Post Ad now</string>
    <string name="how_get_imcoin">How to get imcoin?</string>
    <string name="advertise">Advertise</string>
    <string name="if_return">返回后编辑的内容将会丢失，确认返回?</string>
    <string name="search_community_hint">Search by community name, tag</string>
    <string name="created">Created:</string>
    <string name="ad_post_success_tips">您的广告已成功发布到选择的社区!</string>
    <string name="total">Total:</string>
    <string name="users">Users</string>
    <string name="photo">Photo</string>
    <string name="video_record">Video record</string>
    <string name="video">Video</string>
    <string name="video_size_more_than_100">所选的视频文件不能大于100MB!</string>
    <string name="not_in_wifi_environment">您不是在wifi情况下会耗费比较大的流量，是否继续?</string>
    <string name="video_already_uploaded">最多能够上传一个视频文件</string>
    <string name="media_not_finish_upload">媒体资源尚未完成上传，继续操作将丢失未上传的内容，是否继续?</string>
    <string name="continue_str">继续</string>
    <string name="media_not_yet_finish">资源上传尚未完成!</string>
    <string name="specification">Specification</string>
    <string name="id_str">ID:</string>
    <string name="acquired_users">Acquired Users:</string>
    <string name="promoting">Promoting</string>
    <string name="since">Since:</string>
    <string name="invite_you">邀请您加入</string>
    <string name="invitation">邀请函</string>
    <string name="choose_email_client">Choose Email Client</string>
    <string name="search_promote_community_hint">Search by community name, ID</string>
    <string name="join_and_promote"><![CDATA[Join & Promote]]></string>
    <string name="members">Members:</string>
    <string name="joined">Joined</string>
    <string name="your_email">Your email</string>
    <string name="you_email_hint">Your email can receive our feedback.</string>
    <string name="report_content_hint">Please write your report content.</string>
    <string name="report_description">Report Description</string>
    <string name="submit">Submit</string>
    <string name="report_success">已收到您的举报消息，结果将会通过邮箱反馈给您!</string>
    <string name="light_on">Light On</string>
    <string name="light_off">Light Off</string>
    <string name="scan">Scan</string>
    <string name="join">Join</string>
    <string name="active">Active</string>
    <string name="expired">Expired</string>
    <string name="cancelled">Cancelled</string>
    <string name="posted">Posted:</string>
    <string name="posted_title">Posted:</string>
    <string name="expired_title">Expired:</string>
    <string name="add_community">Add Community</string>
    <string name="scanner">扫一扫</string>
    <string name="community_info">Community Info</string>
    <string name="post_msg">Post a message</string>
    <string name="share">Share</string>
    <string name="post_now">Post Message Now</string>
    <string name="msg_expire_in">Message expire in</string>
    <string name="post_message">Post Message</string>
    <string name="image">Images</string>
    <string name="hour_2">2 hours</string>
    <string name="hour_6">6 hours</string>
    <string name="hour_12">12 hours</string>
    <string name="hour_24">24 hours</string>
    <string name="hour_48">48 hours</string>
    <string name="media">Media</string>
    <string name="delete">Delete</string>
    <string name="if_confirm_delete_post">确定删除该消息?</string>
    <string name="allow_receive_msg">Allow to receive message</string>
    <string name="post_modified_msg_again">Post Modified Message Again</string>
    <string name="cancel_message">Cancel Message</string>
    <string name="active_message">Active Message</string>
    <string name="message_post_success_tips">你的消息已经发布成功!</string>
    <string name="if_confirm_cancel_post">确认取消该消息的发布吗?</string>
    <string name="message_cancel_success_tips">这条消息已经取消发布</string>
    <string name="old_message">Old Message</string>
    <string name="post_message_again">Post Message Again</string>
    <string name="hours">hours</string>
    <string name="post_ad_again">Post Ad Again</string>
    <string name="by_str">By</string>
    <string name="msg_list_null_tips">该社区还没有发布消息\n你可以...</string>
    <string name="my_community_null_tips">你还没有加入或者创建社区呢\n你可以...</string>
    <string name="or_str">or</string>
    <string name="promote_community_null_tips">你还没有加入推广社区呢\n你可以...</string>
    <string name="my_post_null_tips">你还没有发布过消息或者广告呢\n你可以...</string>
    <string name="create_ad">发布广告</string>
    <string name="you_have_collect_imcoin">已成功领取奖励</string>
    <string name="share_to">Share to</string>
    <string name="report_this_msg">Report this message</string>
    <string name="delete_this_msg">Delete this message</string>
    <string name="message">Message</string>
    <string name="please_choose">Please choose</string>
    <string name="login_email_hint">Email</string>
    <string name="use_email_login">Use email to login</string>
    <string name="use_mobile_login">Use mobile number to login</string>
    <string name="network_not_available">The network is not available</string>
    <string name="msg_recall_by_user">This message has been recalled by %1$s</string>
    <string name="account_exception">账号异常</string>
    <string name="connect_conflict_str">同一帐号已在其他设备登录</string>
    <string name="em_user_remove_str">此用户已被移除</string>
    <string name="user_forbidden_str">用户被服务器限制连接</string>
    <string name="check_more">查看更多</string>
    <string name="were_mentioned_str">You were mentioned</string>
    <string name="add_to_contact">加为联系人</string>
    <string name="delete_conversation_messages_tips">删除后，将清空该聊天的消息记录</string>
    <string name="user_kicked_by_other_device">账号被其他设备踢出</string>
    <string name="add_contact_success">已成功添加为联系人</string>
    <string name="my_contact_null_tips">你还没有联系人\n你可以...</string>
    <string name="delete_contact_tips">删除该联系人后，同时删除与该联系人的有关聊天记录</string>
    <string name="nearby">Nearby</string>
    <string name="nearby_msg_list_null_tips">附近没有发现消息</string>
    <string name="from">From</string>
    <string name="imcoin_record_null_tips">未有交易记录</string>
    <string name="expenditure">支出:</string>
    <string name="income">收入:</string>
    <string name="record">记录</string>
    <string name="record_title_type_1">创建广告支出</string>
    <string name="record_title_type_2">转出 - 转给</string>
    <string name="record_title_type_3">转入 - 来自</string>
    <string name="record_title_type_4">官方充值</string>
    <string name="record_title_type_5">阅览广告收入</string>
    <string name="record_title_type_6">推广社区收入</string>
    <string name="record_title_type_7">注册奖励</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="send_imcoin_to">Send imcoin to</string>
    <string name="imcoin_amount">imcoin amount</string>
    <string name="add_note_tips">Add note here (if needed)</string>
    <string name="send">Send</string>
    <string name="transfer_success">转账成功</string>
    <string name="send_imcoin_success">发送成功</string>
    <string name="send_imcoin">Send imcoin</string>
    <string name="recall">撤回</string>
    <string name="recall_str">撤回</string>
    <string name="delete_str">删除</string>
    <string name="copy_str">拷贝</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="finish">Finish</string>
    <string name="received">已收到</string>
    <string name="sent">已发送</string>
    <string name="transfer_info">转账详情</string>
    <string name="send_imcoin_msg_content_receive">您获得一个转账</string>
    <string name="maybe_you_like">您可能喜欢</string>
    <string name="skip">跳过</string>
    <string name="next">Next</string>
</resources>