<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_shadow_full"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_male"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/male"
        android:textColor="@drawable/selector_gender_text"
        android:textSize="13sp" />

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/bg_light_gray" />

    <TextView
        android:id="@+id/tv_female"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/female"
        android:textColor="@drawable/selector_gender_text"
        android:textSize="13sp" />

    <View
        android:id="@+id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/bg_light_gray" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/txt_black"
        android:textSize="13sp" />

</LinearLayout>